<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Page">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="55dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/school"
        android:contentDescription="@string/logo_description"
        android:layout_alignParentTop="true" />

    <!-- Welcome Text -->
    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImageView"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_message"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Username Input -->
    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/welcomeTextView"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/username_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:padding="15dp"
        android:inputType="textEmailAddress" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/usernameEditText"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/password_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:padding="15dp"
        android:inputType="textPassword" />

    <!-- Login Button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <!-- Forgot Password Text -->
    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="italic" />

    <!-- Register Text -->
    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotPasswordTextView"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/register_now"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="italic" />


</RelativeLayout>
